hphp/hack/test/typecheck/req_class_private0.bad.php
<?hh

<<file:__EnableUnstableFeatures("require_class")>>

final class DemoClass {
  use TDemo;
  private static function forPrivate(): void { echo "private"; }

  public static function bleh(): void {
    DemoClass::forPrivate();
  }

  public static function blah(): void {
    self::forPrivate();
  }
}

trait TDemo {
  require class DemoClass;

  public static function demoFunc(): void {
    DemoClass::forPrivate();
  }
}

<<__EntryPoint>>
function main(): void {
  TDemo::demoFunc();
}
